specs/001-typescript-to-zig-native/examples/valid/void-return.ts
function done(): void {
  return;
}

done();
