specs/001-typescript-to-zig-native/examples/invalid/nested-function.ts
if (true) {
  function inner(): int {
    return 1;
  }
}
